# aws_opensearch

./: .gitignore  AWS_COMMANDS_REFERENCE.md  AWS_DEPLOYMENT_HISTORY.md  LAMBDA_UPDATE_HELP.md  README.md  __init__.py  app.py  data-access-policy.json  download_data.py  inventory_data.json  inventory_data.jsonl  lambda_function.py  pyproject.toml  ui.py  utils.py
